# TEQ

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/collected/: Content – Columbia Law Review 126-2.html  Content – Columbia Law Review 126-3.html  Content – Columbia Law Review.html
data/sources/: 2024-LawJ-Master.csv  journal_issns.csv
docs/: PAUSE-AND-RESUME.md  TEQ-Copilot-Prompt.md  TEQ-research-design.md  data-sources.md  gemini-data-acquisition-memo.md  gemini-framework.md  gemini-research-suite.py  research-design.md
research/: 001_project-inception.md  hypotheses.json
scripts/: collect_crossref.py  collect_journal_sites.py  collect_orcid.py  collect_scholar.py  discover_journal_sites.py  extract_features.py  load_wl_data.py  parse_journal_html.py  process_heinonline.py
src/teq/: __init__.py  database.py  diary.py  features.py  hypothesis.py  models.py  overseer.py
tests/: __init__.py  test_features.py  test_hypothesis.py  test_models.py
